# 2d-packing

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  build.py  pyproject.toml  pytest.ini  setup.py
src/packing/: .clang_complete  basis.cpp  basis.h  fluke.c  geometry.cpp  geometry.h  globals.h  groups.c  isopointal.cpp  isopointal.h  math.cpp  math.h  module.cpp  monte_carlo.cpp  monte_carlo.h  packing.cpp  packing.h  random.cpp  random.h  shapes.c  shapes.cpp  shapes.h  util.cpp  util.h  wallpaper.c  wallpaper.cpp  wallpaper.h
src/pypacking/: __init__.py  packing.py  pypacking.pyx  shapes.py  version.py  wallpaper_groups.py
src/pypacking/data/: download_data.py  wyckoff.py
test/: Basis_test.py  random_test.py  test_Shape.py  test_Vect2.py  test_geometry.py
test/_packing/: import_test.py  packing_test.py  util_test.py  wallpaper_test.py
test/pypacking/: shape_test.py
