[build-system]
requires = ["poetry>=0.12", "pybind11~=2.2"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pypacking"
version = "0.1.0"
description = "Find optimal packings for arbitrary 2D shapes."
authors = ["Toby Hudson", "Malcolm Ramsay <malramsay64@gmail.com"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"
numpy = ">=1.14"
click = "*"
attrs = "*"
pybind11 = "~=2.2."

[tool.poetry.dev-dependencies]
pytest = "^3.9"
black = "18.9b0"
pylint = "*"
